--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "chart.js": "^4.4.0",
     "date-fns": "^2.30.0",
     "lunar-javascript": "^1.6.12",
-    "pinia": "^2.1.7",
+    "pinia": "^3.0.3",
+    "pinia-plugin-persistedstate": "^4.5.0",
     "three": "^0.158.0",
     "vue": "^3.4.0",
     "vue-chartjs": "^5.3.0",
