--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
     "tailwindcss": "^3.3.5",
+    "terser": "^5.44.0",
     "typescript": "^5.9.2",
     "vite": "^4.5.0",
     "vue-tsc": "^1.8.27"
