--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "terser": "^5.44.0",
     "typescript": "^5.9.2",
     "vite": "^4.5.0",
+    "vite-plugin-pwa": "^1.0.3",
     "vue-tsc": "^1.8.27"
   }
 }
