--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "build:tsc": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
     "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@tweenjs/tween.js": "^25.0.0",
@@ -32,10 +36,15 @@
     "@typescript-eslint/eslint-plugin": "^8.53.0",
     "@typescript-eslint/parser": "^8.53.0",
     "@vitejs/plugin-vue": "^4.4.1",
+    "@vitest/coverage-v8": "^4.0.17",
+    "@vitest/ui": "^4.0.17",
     "@vue/eslint-config-typescript": "^14.6.0",
+    "@vue/test-utils": "^2.4.6",
     "autoprefixer": "^10.4.16",
     "eslint": "^9.39.2",
     "eslint-plugin-vue": "^9.33.0",
+    "happy-dom": "^20.3.3",
+    "jsdom": "^27.4.0",
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
     "tailwindcss": "^3.3.5",
@@ -43,6 +52,7 @@
     "typescript": "^5.9.2",
     "vite": "^4.5.0",
     "vite-plugin-pwa": "^1.0.3",
+    "vitest": "^4.0.17",
     "vue-tsc": "^1.8.27"
   }
 }
