feat: 完善 GitHub Copilot skills 整合與專案結構優化
🤖 GitHub Copilot 技能整合：
- 新增 .github/skills/ 目錄結構（符合 GitHub Copilot 慣例）
- 建立 soft-routing.md 軟路由機制
- 新增 GitHub skills README.md 與使用指南
- 完整的觸發關鍵詞映射系統

🧹 專案結構清理：
- 清理 .opencode 目錄的 node_modules（應被 gitignore）
- 修正 .gitignore 設定（正確忽略第三方套件）
- 保留必要的 OpenCode 配置檔案

📋 新增檔案：
- .github/skills/README.md - GitHub Copilot 技能總覽
- .github/skills/soft-routing.md - 詳細軟路由機制
- .opencode/.gitignore - OpenCode 目錄的 gitignore
- .opencode/package.json - OpenCode 配置

🔧 技術特色：
- 符合 GitHub Copilot 官方技能格式
- 智慧化載入決策樹與機制
- Cross-Platform 支援（CLI、VS Code、Web）
- 完整的除錯與監控指南

✅ 驗證通過：
- 檔案結構符合 GitHub Copilot 規範
- .gitignore 正確配置
- OpenCode 工具配置完整

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,23 @@
+# 依賴套件
 node_modules
+
+# OpenCode 相關（忽略 .opencode 內的 node_modules）
+.opencode/node_modules
+
+# 開發工具
 .next/
-*.DS_Store
 .vscode/
+*.DS_Store
 *.log
+
+# 環境變數
 *.env
 *.env.local
 *.env.development.local
 *.env.test.local
 *.env.production.local
+
+# 建置輸出
 coverage/
 dist/
 build/
