feat: 新增用戶賦權與教育功能模組
新增功能組件：
- DisclaimerNotice.vue：免責聲明展示組件，支援多級別警告和用戶確認
- EducationalContent.vue：教育內容展示組件，包含分類篩選和詳情模態框
- UserFeedback.vue：用戶回饋組件，支援多維度評分和詳細回饋
- UserSettings.vue：用戶設定組件，包含風險承受度和權重調整

新增服務模組：
- disclaimer.ts：免責聲明服務，根據投資建議動態生成警告內容
- userEmpowerment.ts：用戶賦權服務，管理個人化設定和權重配置
- userFeedback.ts：回饋服務，收集和分析用戶回饋數據

修正問題：
- 修復 DisclaimerNotice.vue 圖標導入錯誤（AlertTriangleIcon → ExclamationTriangleIcon）
- 修復 EducationalContent.vue 變數名稱錯誤（content → item）
- 優化 UserSettings.vue CSS 類別名稱一致性

技術改進：
- 更新 package.json 依賴版本
- 擴展類型定義支援新功能模組
- 完善現有組件的類型安全和錯誤處理

--- a/package.json
+++ b/package.json
@@ -7,15 +7,18 @@
     "dev": "vite",
     "build": "vite build",
     "build:tsc": "vue-tsc --noEmit && vite build",
+    "build:analyze": "vite build --mode analyze",
     "preview": "vite preview",
     "lint": "eslint . --fix",
     "format": "prettier --write src/",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "test:ci": "vitest run --coverage --reporter=verbose"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.2.0",
     "@tweenjs/tween.js": "^25.0.0",
     "@vuepic/vue-datepicker": "^11.0.2",
     "axios": "^1.6.0",
